--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="#" class="icon brands fa-instagram">Instagram</a></li>
-								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="#https://www.linkedin.com/in/peterjacobs615/" class="icon brands fa-linkedin">LinkedIn</a></li>
+								<li><a href="#https://github.com/PeterJacobs98" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -68,7 +67,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Peter Jacobs</li><li>Design By: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
