--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 						<b><p>Hello there, nice of you to drop by - See links for more deets :)</p></b>
 						<footer>
 							<ul class="icons">
-								<li><a href="#https://www.linkedin.com/in/peterjacobs615/" class="icon brands fa-linkedin">LinkedIn</a></li>
-								<li><a href="#https://github.com/PeterJacobs98" class="icon brands fa-github">Github</a></li>
+								<li><a href="https://www.linkedin.com/in/peterjacobs615/" class="icon brands fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://github.com/PeterJacobs98" class="icon brands fa-github">Github</a></li>
 							</ul>
 						</footer>
 					</section>
